Wed Mar 13 05:49:29 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/irb.rb:  Fix typo

Tue Mar 12 22:20:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments, iseq_compile_each): support required
	  keyword arguments.   [ruby-core:51454] [Feature #7701]

	* iseq.c (rb_iseq_parameters): ditto.

	* parse.y (f_kw, f_block_kw): ditto.  this syntax is still
	  experimental, the notation may change.

	* vm_core.h (rb_iseq_struct): ditto.

	* vm_insnhelper.c (vm_callee_setup_keyword_arg): ditto.

Tue Mar 12 17:02:53 2013  TAKANO Mitsuhiro <tak@no32.tk>

	* date_core.c: clearly specify operator precedence.

Tue Mar 12 17:00:45 2013  TAKANO Mitsuhiro <tak@no32.tk>

	* insns.def: fix condition.

Tue Mar 12 16:48:19 2013  TAKANO Mitsuhiro <tak@no32.tk>

	* rational.c: fix dangling if, else-if and else.

Tue Mar 12 06:27:59 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/setup_command.rb:  Don't delete non-rubygems
	  files when installing RubyGems.
	* test/rubygems/test_gem_commands_setup_command.rb:  Test for the
	  above.

	* lib/rubygems/ext/ext_conf_builder.rb:  Use full path to siteconf.rb
	  in case the extconf.rb changes directories (like memcached does).

	* lib/rubygems/package.rb:  Remove double slash from path.
	* test/rubygems/test_gem_package.rb:  Test for the above.
	* test/rubygems/test_gem_package_old.rb:  ditto.

	* lib/rubygems/source.rb:  Revert automatic HTTPS upgrade
	* lib/rubygems/spec_fetcher.rb:  ditto.
	* test/rubygems/test_gem_remote_fetcher.rb:  ditto.
	* test/rubygems/test_gem_source.rb:  ditto.
	* test/rubygems/test_gem_spec_fetcher.rb:  ditto.

Tue Mar 12 02:25:19 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/net/smtp.rb:  Added Net::SMTP#rset method to implement the SMTP
	  RSET command.  [ruby-trunk - Feature #5373]
	* NEWS:  ditto.
	* test/net/smtp/test_smtp.rb:  Test for the above.

Mon Mar 11 22:44:57 2013  Tanaka Akira  <akr@fsij.org>
