@@ -25,15 +25,18 @@ extern "C" {
 #include RUBY_EXTCONF_H
 #endif
 
-#if defined(HAVE_SYS_TIME_H)
+#if !defined(HAVE_STRUCT_TIMEVAL)
+# if defined(HAVE_SYS_TIME_H)
 #  include <sys/time.h>
-#elif !defined(_WIN32)
+# elif !defined(_WIN32)
 #  define time_t long
 struct timeval {
     time_t tv_sec;	/* seconds */
     long tv_usec;	/* microseconds */
 };
-#endif
+# endif
+#endif /* HAVE_STRUCT_TIMEVAL */
+
 #if defined(HAVE_SYS_TYPES_H)
 #  include <sys/types.h>
 #endif
